--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
         <link rel="stylesheet" href="./res/style_detail.css">
-        <script src="./res/zalopay.js"></script>
+        <script src="./res/zalopay.min.js"></script>
         <script type="text/javascript">
             var utils = {
             back: function () {
